mi primer cambio

--- a/src/index.html
+++ b/src/index.html
@@ -9,5 +9,23 @@
 
 <body>
   <script src="index.js" type="module"></script>
+  <h1 class="title">🔥ANALIZADOR DE TEXTO🔥</h1>
+  
+  <div>
+      <label>Caracteres: </label>
+      <label id="datorecibido"></label>
+  </div>
+
+  <form>
+      <input type="text" name="dato" id="dato" /><br />
+  </form>
+
+  <footer>
+    <small>
+      Autora: Adri
+    </small>
+  </footer>
+
+  </div>
 </body>
 </html>
