--- a/src/index.html
+++ b/src/index.html
@@ -2,22 +2,24 @@
 <html>
 
 <head>
+
   <meta charset="utf-8">
   <title>Analizador de texto</title>
   <link rel="stylesheet" href="style.css" />
+
 </head>
 
 <body>
-  <script src="index.js" type="module"></script>
+
   <h1 class="title">🔥ANALIZADOR DE TEXTO🔥</h1>
   
   <div>
       <label>Caracteres: </label>
-      <label id="datorecibido"></label>
+      <label id="datolabel"></label>
   </div>
 
   <form>
-      <input type="text" name="dato" id="dato" /><br />
+      <input type="text" name="datoform" id="datoform" /><br />
   </form>
 
   <footer>
@@ -26,6 +28,8 @@
     </small>
   </footer>
 
-  </div>
+  <script src="index.js" type="module"></script>
+  <script src="analyzer.js" type="module"></script>
+
 </body>
 </html>
