--- a/src/index.html
+++ b/src/index.html
@@ -19,18 +19,14 @@
 
   <div>
     <ul>
-      <label>Caracteres:</label>
-      <li class="datolista1">0</li>
-      <label>Palabras:</label>
-      <li class="datolista2">0</li>
-      <label>Caracteres Sin Espacios:</label>
-      <li class="datolista3">0</li>
-      <label>Numeros:</label>
-      <li class="datolista4">0</li>
-      <label>Suma Numeros:</label>
-      <li class="datolista5">0</li>
-      <label>Promedio Longitud:</label>
-      <li class="datolista6">0</li>
+
+      
+      <li class="datolista1">Caracteres: 0</li>
+      <li class="datolista1">Palabras: 0</li>
+      <li class="datolista1">Caracteres Sin Espacios: 0</li>
+      <li class="datolista1">Numeros: 0</li>
+      <li class="datolista1">Suma Numeros: 0</li>
+      <li class="datolista1">Promedio Longitud: 0</li>
 
     </ul>
   </div>
