--- a/src/index.html
+++ b/src/index.html
@@ -19,12 +19,12 @@
 
   <div name="contenedor">
     <ul>
-      <li class="datolista1">Caracteres: 0</li>
-      <li class="datolista1">Palabras: 0</li>
-      <li class="datolista1">Caracteres Sin Espacios: 0</li>
-      <li class="datolista1">Numeros: 0</li>
-      <li class="datolista1">Suma Numeros: 0</li>
-      <li class="datolista1">Promedio Longitud: 0</li>
+      <li class="datolista1" data-testid="character-count">Caracteres: 0</li>
+      <li class="datolista1" data-testid="word-count">Palabras: 0</li>
+      <li class="datolista1" data-testid="character-no-spaces-count">Caracteres Sin Espacios: 0</li>
+      <li class="datolista1" data-testid="number-count">Numeros: 0</li>
+      <li class="datolista1" data-testid="number-sum">Suma Numeros: 0</li>
+      <li class="datolista1" data-testid="word-length-average">Promedio Longitud: 0</li>
     </ul>
   </div>
   
